# simSSED

./: .gitignore  MANIFEST.in  README.md  TODO.txt  pyproject.toml
ICF/: ICF.ipynb  TODO.txt  compute_wedge_radial_profiles.py  find_best_center_shift.py  find_diffraction_center.py
ICF_v2/: Adaptive Sampling Strategies for Center .md  ICF_process_centers.ipynb  ICF_v2.ipynb  TODO.txt  center_of_mass_initial_guess.py  center_shift_csv.ipynb  compute_bin_medians.py  compute_wedge_radial_profiles_shifted.py  find_best_center_shift_vectorized.py  find_diffraction_center.py  helpers.py  icf_cell.ipynb  icf_cell_v2.ipynb  load_image_and_mask.py  process_image.py  update_h5.py
ICF_v3/: ICFTOTAL.py  ICF_nomulti.ipynb  TODO.txt  adaptive_sampling_icf_v2.ipynb  center_of_mass_initial_guess.py  center_shift_csv.ipynb  compare_centers.ipynb  compute_wedge_radial_profiles_shifted.py  find_best_center_shift_vectorized.py  find_diffraction_center.py  helpers.py  icf_adaptive_sampling.ipynb  icf_cell.ipynb  icftotal_v2.py  image_processing.py  main.py  plot_centers.ipynb  process_iamges_v2.py  process_image.py  process_images.py  simulate_adaptive_sampling.ipynb  smooth_and_shift_centers.ipynb
IQM/: IQM.ipynb  convert_hkl_crystfel_to_shelx.py  convert_hkl_to_mtz.py  process_all_stream_files.py  run_partialator_and_convert.py
IQM_KMC_v2/: IQM_KMC.ipynb  KMeans_cluster.py  automate_evaluation.py  calculate_weighted_rmsd.py  calculate_weighted_rmsd_pi.py  extract_chunk_data.py  filter_best_sol.py  open_plot.py  process_all_stream_files.py  read_stream_write_sol.py
(+252 files in other folders)
